font stylr added

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             }
         }
     </script>
-    <script>
-            .font - family{
-            font - family: 'Manrope', sans - serif;
+    <style>
+        .font-family{
+            font-family: 'Manrope', sans - serif;
         }
-    </script>
+    </style>
 </head>
 
 <body class="font-family">
