--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -28,18 +28,18 @@
         }
     </script>
     <style>
-        .font-family{
-            font-family: 'Manrope', sans - serif;
+        .font-family {
+            font-family: 'Manrope', sans-serif;
         }
     </style>
 </head>
 
 <body class="font-family">
-    <header class="w-[81.25%] mx-auto">
-        <div class="navbar bg-base-100">
+    <header class="w-[81.25%] mx-auto pt-8">
+        <div class="navbar">
             <div class="navbar-start">
                 <div class="dropdown">
-                    <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                    <div tabindex="0" role="button" class="lg:hidden">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
                             stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -55,10 +55,10 @@
                         <li><a href="#contact" class="hover:text-hockey-primary">Contact</a></li>
                     </ul>
                 </div>
-                <a class="btn btn-ghost text-xl gap-0">Hockey<span class="text-hockey-primary">'</span>s</a>
+                <a class="text-4xl gap-0 font-extrabold">Hockey<span class="text-hockey-primary">'</span>s</a>
             </div>
             <div class="navbar-center hidden lg:flex">
-                <ul class="menu menu-horizontal px-1">
+                <ul class="menu menu-horizontal px-1 gap-3">
                     <li><a href="#home" class="hover:text-hockey-primary">Home</a></li>
                     <li><a href="#about" class="hover:text-hockey-primary">About</a></li>
                     <li><a href="#pages" class="hover:text-hockey-primary">Pages</a></li>
@@ -67,45 +67,90 @@
                 </ul>
             </div>
             <div class="navbar-end gap-3">
-                <button class="btn btn-ghost btn-circle text-gray-400  hover:text-white">
+                <button class="btn btn-ghost btn-circle text-gray-400 hidden md:block hover:text-white">
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </button>
-                <a class="btn bg-hockey-primary text-white hover:text-hockey-primary hover:bg-transparent hover:border-hockey-primary">Get Ticket</a>
+                <a
+                    class="btn bg-hockey-primary text-white hover:text-hockey-primary hover:bg-transparent hover:border-hockey-primary">Get
+                    Ticket</a>
             </div>
         </div>
     </header>
     <main class="w-[81.25%] mx-auto">
         <section>
-            <div class="carousel w-full mt-12">
-                <div id="slide1" class="carousel-item relative w-full">
-                  <img src="images/1.png" class="w-full" />
-                  <div class="absolute flex transform translate-y-1/2 left-7 bottom-10 gap-4">
-                    <a href="#slide4" class="btn btn-circle bg-hockey-font text-white">❮</a> 
-                    <a href="#slide2" class="btn btn-circle bg-hockey-font text-white">❯</a>
-                  </div>
-                </div> 
-                <div id="slide2" class="carousel-item relative w-full">
-                  <img src="images/2.png" class="w-full" />
-                  <div class="absolute flex transform translate-y-1/2 left-7 bottom-10 gap-4">
-                    <a href="#slide1" class="btn btn-circle bg-hockey-font text-white">❮</a> 
-                    <a href="#slide3" class="btn btn-circle bg-hockey-font text-white">❯</a>
-                  </div>
-                </div> 
-                <div id="slide3" class="carousel-item relative w-full">
-                  <img src="images/3.png" class="w-full" />
-                  <div class="absolute flex transform translate-y-1/2 left-7 bottom-10 gap-4">
-                    <a href="#slide2" class="btn btn-circle bg-hockey-font text-white">❮</a> 
-                    <a href="#slide4" class="btn btn-circle bg-hockey-font text-white">❯</a>
-                  </div>
-                </div> 
-                <div id="slide4" class="carousel-item relative w-full">
-                  <img src="images/4.png" class="w-full" />
-                  <div class="absolute flex transform translate-y-1/2 left-7 bottom-10 gap-4">
-                    <a href="#slide3" class="btn btn-circle bg-hockey-font text-white">❮</a> 
-                    <a href="#slide1" class="btn btn-circle bg-hockey-font text-white">❯</a>
-                  </div>
+            <div class="carousel w-full lg:h-[500px] rounded-2xl mt-12 ">
+                <div id="slide1" class="carousel-item w-full relative flex flex-col">
+                    <div class=" relative w-full">
+                        <img src="images/1.png" class="w-full h-50 lg:h-[500px]" />
+                        <div
+                            class="absolute flex transform -translate-x-1/2 left-1/2 bottom-[10%] gap-4 lg:translate-y-1/2 lg:left-20">
+                            <a href="#slide4" class="btn btn-circle bg-hockey-font text-white">❮</a>
+                            <a href="#slide2" class="btn btn-circle bg-hockey-font text-white">❯</a>
+                        </div>
+                    </div>
+                    <div
+                        class="mt-8 p-8 rounded-2xl bg-hockey-font lg:w-[500px] lg:absolute lg:transform lg:translate-y-1/2 lg:right-16 lg:bottom-24">
+                        <h2 class="font-extrabold text-2xl text-white pb-4">Meet all the heroes from the field</h2>
+                        <p class="font-medium text-gray-400">Welcome to the heart of the action, where passion meets precision on the icy battleground!
+                        </p>
+                    </div>
                 </div>
-              </div>
+                <div id="slide2" class="carousel-item relative w-full flex flex-col">
+                    <div class=" relative w-full">
+                        <img src="images/2.png" class="w-full h-50 lg:h-[500px]" />
+                        <div
+                            class="absolute flex transform -translate-x-1/2 left-1/2 bottom-[10%] gap-4 lg:translate-y-1/2 lg:left-20">
+                            <a href="#slide1" class="btn btn-circle bg-hockey-font text-white">❮</a>
+                            <a href="#slide3" class="btn btn-circle bg-hockey-font text-white">❯</a>
+                        </div>
+                    </div>
+                    <div
+                        class="p-8 rounded-2xl bg-hockey-font lg:w-[500px] lg:absolute lg:transform lg:translate-y-1/2 lg:right-16 lg:bottom-24">
+                        <h2 class="font-extrabold text-2xl text-white pb-4">Meet all the heroes from the field</h2>
+                        <p class="font-medium text-gray-400">Welcome to the heart of the action, where passion meets precision on the icy battleground!
+                        </p>
+                    </div>
+                </div>
+                <div id="slide3" class="carousel-item relative w-full flex flex-col">
+                    <div class=" relative w-full">
+                        <img src="images/3.png" class="w-full h-50 lg:h-[500px]" />
+                        <div
+                            class="absolute flex transform -translate-x-1/2 left-1/2 bottom-[10%] gap-4 lg:translate-y-1/2 lg:left-20">
+                            <a href="#slide2" class="btn btn-circle bg-hockey-font text-white">❮</a>
+                            <a href="#slide4" class="btn btn-circle bg-hockey-font text-white">❯</a>
+                        </div>
+                    </div>
+                    <div
+                        class="p-8 rounded-2xl bg-hockey-font lg:w-[500px] lg:absolute lg:transform lg:translate-y-1/2 lg:right-16 lg:bottom-24">
+                        <h2 class="font-extrabold text-2xl text-white pb-4">Meet all the heroes from the field</h2>
+                        <p class="font-medium text-gray-400">Welcome to the heart of the action, where passion meets precision on the icy battleground!
+                        </p>
+                    </div>
+                </div>
+                <div id="slide4" class="carousel-item relative w-full flex flex-col">
+                    <div class=" relative w-full">
+                        <img src="images/4.png" class="w-full h-50 lg:h-[500px]" />
+                        <div
+                            class="absolute flex transform -translate-x-1/2 left-1/2 bottom-[10%] gap-4 lg:translate-y-1/2 lg:left-20">
+                            <a href="#slide3" class="btn btn-circle bg-hockey-font text-white">❮</a>
+                            <a href="#slide1" class="btn btn-circle bg-hockey-font text-white">❯</a>
+                        </div>
+                    </div>
+                    <div
+                        class="p-8 rounded-2xl bg-hockey-font lg:w-[500px] lg:absolute lg:transform lg:translate-y-1/2 lg:right-16 lg:bottom-24">
+                        <h2 class="font-extrabold text-2xl text-white pb-4">Meet all the heroes from the field</h2>
+                        <p class="font-medium text-gray-400">Welcome to the heart of the action, where passion meets precision on the icy battleground!
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="py-16">
+            <div class="w-full border-t-2 border-dashed py-8 text-center">
+                <h2>Professional Hockeys Club</h2>
+                <p>Welcome to the heart of our team, where passion meets prowess. Our Professional Hockey Club section is the epicenter of thrilling victories, relentless training, and the unbreakable spirit that defines our team.</p>
+            </div>
+            <div></div>
         </section>
     </main>
 </body>
