--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 
 <body class="font-family">
-    <header class="w-[81.25%] mx-auto pt-8">
+    <header class="w-[81.25%] max-w-[1170px] mx-auto pt-8">
         <div class="navbar">
             <div class="navbar-start">
                 <div class="dropdown">
@@ -55,7 +55,8 @@
                         <li><a href="#contact" class="hover:text-hockey-primary">Contact</a></li>
                     </ul>
                 </div>
-                <a class="text-4xl gap-0 font-extrabold">Hockey<span class="text-hockey-primary">'</span>s</a>
+                <a class="text-2xl lg:text-4xl gap-0 font-extrabold">Hockey<span
+                        class="text-hockey-primary">'</span>s</a>
             </div>
             <div class="navbar-center hidden lg:flex">
                 <ul class="menu menu-horizontal px-1 gap-3">
@@ -70,13 +71,12 @@
                 <button class="btn btn-ghost btn-circle text-gray-400 hidden md:block hover:text-white">
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </button>
-                <a
-                    class="btn bg-hockey-primary text-white hover:text-hockey-primary hover:bg-transparent hover:border-hockey-primary">Get
+                <a class="btn bg-hockey-primary text-white hover:text-hockey-primary hover:bg-transparent hover:border-hockey-primary">Get
                     Ticket</a>
             </div>
         </div>
     </header>
-    <main class="w-[81.25%] mx-auto">
+    <main class="w-[81.25%] max-w-[1170px] mx-auto">
         <section>
             <div class="carousel w-full lg:h-[500px] rounded-2xl mt-12 ">
                 <div id="slide1" class="carousel-item w-full relative flex flex-col">
@@ -90,8 +90,10 @@
                     </div>
                     <div
                         class="mt-8 p-8 rounded-2xl bg-hockey-font lg:w-[500px] lg:absolute lg:transform lg:translate-y-1/2 lg:right-16 lg:bottom-24">
-                        <h2 class="font-extrabold text-2xl text-white pb-4">Meet all the heroes from the field</h2>
-                        <p class="font-medium text-gray-400">Welcome to the heart of the action, where passion meets precision on the icy battleground!
+                        <h2 class="font-extrabold text-lg lg:text-2xl text-white pb-4">Meet all the heroes from the
+                            field</h2>
+                        <p class="font-medium text-gray-400">Welcome to the heart of the action, where passion meets
+                            precision on the icy battleground!
                         </p>
                     </div>
                 </div>
@@ -106,8 +108,10 @@
                     </div>
                     <div
                         class="p-8 rounded-2xl bg-hockey-font lg:w-[500px] lg:absolute lg:transform lg:translate-y-1/2 lg:right-16 lg:bottom-24">
-                        <h2 class="font-extrabold text-2xl text-white pb-4">Meet all the heroes from the field</h2>
-                        <p class="font-medium text-gray-400">Welcome to the heart of the action, where passion meets precision on the icy battleground!
+                        <h2 class="font-extrabold text-lg lg:text-2xl text-white pb-4">Meet all the heroes from the
+                            field</h2>
+                        <p class="font-medium text-gray-400">Welcome to the heart of the action, where passion meets
+                            precision on the icy battleground!
                         </p>
                     </div>
                 </div>
@@ -122,8 +126,10 @@
                     </div>
                     <div
                         class="p-8 rounded-2xl bg-hockey-font lg:w-[500px] lg:absolute lg:transform lg:translate-y-1/2 lg:right-16 lg:bottom-24">
-                        <h2 class="font-extrabold text-2xl text-white pb-4">Meet all the heroes from the field</h2>
-                        <p class="font-medium text-gray-400">Welcome to the heart of the action, where passion meets precision on the icy battleground!
+                        <h2 class="font-extrabold text-lg lg:text-2xl text-white pb-4">Meet all the heroes from the
+                            field</h2>
+                        <p class="font-medium text-gray-400">Welcome to the heart of the action, where passion meets
+                            precision on the icy battleground!
                         </p>
                     </div>
                 </div>
@@ -138,19 +144,91 @@
                     </div>
                     <div
                         class="p-8 rounded-2xl bg-hockey-font lg:w-[500px] lg:absolute lg:transform lg:translate-y-1/2 lg:right-16 lg:bottom-24">
-                        <h2 class="font-extrabold text-2xl text-white pb-4">Meet all the heroes from the field</h2>
-                        <p class="font-medium text-gray-400">Welcome to the heart of the action, where passion meets precision on the icy battleground!
+                        <h2 class="font-extrabold text-lg lg:text-2xl text-white pb-4">Meet all the heroes from the
+                            field</h2>
+                        <p class="font-medium text-gray-400">Welcome to the heart of the action, where passion meets
+                            precision on the icy battleground!
                         </p>
                     </div>
                 </div>
             </div>
         </section>
         <section class="py-16">
-            <div class="w-full border-t-2 border-dashed py-8 text-center">
-                <h2>Professional Hockeys Club</h2>
-                <p>Welcome to the heart of our team, where passion meets prowess. Our Professional Hockey Club section is the epicenter of thrilling victories, relentless training, and the unbreakable spirit that defines our team.</p>
+            <div class="w-full border-t-2 border-b-2 border-dashed py-8 text-center">
+                <h2 class="font-extrabold text-2xl lg:text-4xl text-hockey-font pb-4">Professional Hockeys Club</h2>
+                <p class="max-w-[600px] mx-auto text-gray-400 font-medium">Welcome to the heart of our team, where
+                    passion meets prowess. Our Professional Hockey Club section is the epicenter of thrilling victories,
+                    relentless training, and the unbreakable spirit that defines our team.</p>
             </div>
-            <div></div>
+            <div class="flex flex-col lg:flex-row py-16">
+                <div class="text-center px-4 flex-1">
+                    <div class="radial-progress transform rotate-[120deg] text-red-600" style="--value:87;"
+                        role="progressbar"><span class="text-black transform -rotate-[120deg] font-extrabold">87%</span>
+                    </div>
+                    <h2 class="font-extrabold text-xl text-hockey-font py-4">Prayer Facility
+                    </h2>
+                    <p class="font-medium text-gray-400">Step into the sacred space of our Prayer.
+                    </p>
+                </div>
+                <div class="text-center px-4 flex-1">
+                    <div class="radial-progress transform rotate-[120deg] text-green-600" style="--value:95;"
+                        role="progressbar"><span class="text-black transform -rotate-[120deg] font-extrabold">95%</span>
+                    </div>
+                    <h2 class="font-extrabold text-xl text-hockey-font py-4">Experienced Coach
+                    </h2>
+                    <p class="font-medium text-gray-400">Our experienced coach brings a wealth of knowledge.
+                    </p>
+                </div>
+                <div class="text-center px-4 flex-1">
+                    <div class="radial-progress transform rotate-[120deg] text-orange-600" style="--value:90;"
+                        role="progressbar"><span class="text-black transform -rotate-[120deg] font-extrabold">90%</span>
+                    </div>
+                    <h2 class="font-extrabold text-xl text-hockey-font py-4">Senior Player
+                    </h2>
+                    <p class="font-medium text-gray-400">Meet the driving forces behind our victories.
+                    </p>
+                </div>
+                <div class="text-center px-4 flex-1">
+                    <div class="radial-progress transform rotate-[120deg] text-blue-600" style="--value:80;"
+                        role="progressbar"><span class="text-black transform -rotate-[120deg] font-extrabold">80%</span>
+                    </div>
+                    <h2 class="font-extrabold text-xl text-hockey-font py-4">Training Ground
+                    </h2>
+                    <p class="font-medium text-gray-400">our Training Ground is where passion meets precision.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="w-full border-t-2 border-b-2 border-dashed py-8 text-center">
+                <h2 class="font-extrabold text-2xl lg:text-4xl text-hockey-font pb-4">Program Sections</h2>
+                <p class="max-w-[600px] mx-auto text-gray-400 font-medium">Explore the heart of our hockey community
+                    through our meticulously curated Program Sections. Immerse yourself in a world where passion meets
+                    precision.</p>
+            </div>
+            <div class=" mt-12 flex flex-col lg:flex-row gap-6">
+                <div class=" flex-1 bg-cover bg-no-repeat bg-blend-multiply rounded-2xl" style="background: url(images/2.png) rgba(19, 19, 24, 0.50);">
+                    <div class="pt-10 lg:pt-24 pb-10 pl-10">
+                        <h1 class="mb-5 text-2xl text-white font-bold">Junior Program</h1>
+                        <p class="mb-5 max-w-[495px] text-white ml-0">Welcome to the heart of our future champions! It is designed to ignite the passion for hockey in the next generation. Discover a dynamic and engaging environment.<p>
+                        <button class="btn bg-hockey-primary border-hockey-primary text-white hover:text-hockey-primary hover:bg-transparent hover:border-hockey-primary">Register now!</button>
+                    </div>
+                </div>
+                <div class=" flex-1 bg-cover bg-blend-multiply rounded-2xl" style="background: url(images/3.png) rgba(19, 19, 24, 0.50);">
+                    <div class="pt-10 lg:pt-24 pb-10 pl-10">
+                        <h1 class="mb-5 text-2xl text-white font-bold">Teenager Program</h1>
+                        <p class="mb-5 max-w-[495px] text-white ml-0">Welcome to our Teenager Program, where the future of hockey takes center stage. We are dedicated to nurturing the skills and enthusiasm of our young athletes.<p>
+                        <button class="btn bg-hockey-primary border-hockey-primary text-white hover:text-hockey-primary hover:bg-transparent hover:border-hockey-primary">Register now!</button>
+                    </div>
+                </div>
+            </div>
+            <div class="my-8 w-full bg-cover bg-blend-multiply rounded-2xl" style="background: url(images/4.png) rgba(19, 19, 24, 0.50);">
+                <div class="pt-10 lg:pt-48 pb-10 pl-10">
+                    <h1 class="mb-5 text-2xl text-white font-bold">Professional Program</h1>
+                    <p class="mb-5 max-w-[520px] text-white ml-0">Welcome to the heart of excellence! Our Professional Program is meticulously designed for passionate hockey enthusiasts who aspire to reach the pinnacle of their skills. Immerse yourself in a world of elite coaching.<p>
+                    <button class="btn bg-hockey-primary border-hockey-primary text-white hover:text-hockey-primary hover:bg-transparent hover:border-hockey-primary">Register now!</button>
+                </div>
+            </div>
         </section>
     </main>
 </body>
