--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
                 <button class="btn btn-ghost btn-circle text-gray-400 hidden md:block hover:text-white">
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </button>
-                <a class="btn bg-hockey-primary text-white hover:text-hockey-primary hover:bg-transparent hover:border-hockey-primary">Get
+                <a
+                    class="btn bg-hockey-primary text-white hover:text-hockey-primary hover:bg-transparent hover:border-hockey-primary">Get
                     Ticket</a>
             </div>
         </div>
@@ -207,26 +208,161 @@
                     precision.</p>
             </div>
             <div class=" mt-12 flex flex-col lg:flex-row gap-6">
-                <div class=" flex-1 bg-cover bg-no-repeat bg-blend-multiply rounded-2xl" style="background: url(images/2.png) rgba(19, 19, 24, 0.50);">
+                <div class=" flex-1 bg-cover bg-no-repeat bg-blend-multiply rounded-2xl"
+                    style="background: url(images/2.png) rgba(19, 19, 24, 0.50);">
                     <div class="pt-10 lg:pt-24 pb-10 pl-10">
                         <h1 class="mb-5 text-2xl text-white font-bold">Junior Program</h1>
-                        <p class="mb-5 max-w-[495px] text-white ml-0">Welcome to the heart of our future champions! It is designed to ignite the passion for hockey in the next generation. Discover a dynamic and engaging environment.<p>
-                        <button class="btn bg-hockey-primary border-hockey-primary text-white hover:text-hockey-primary hover:bg-transparent hover:border-hockey-primary">Register now!</button>
+                        <p class="mb-5 max-w-[495px] text-white ml-0">Welcome to the heart of our future champions! It
+                            is designed to ignite the passion for hockey in the next generation. Discover a dynamic and
+                            engaging environment.
+                        <p>
+                            <button
+                                class="btn bg-hockey-primary border-hockey-primary text-white hover:text-hockey-primary hover:bg-transparent hover:border-hockey-primary">Register
+                                now!</button>
                     </div>
                 </div>
-                <div class=" flex-1 bg-cover bg-blend-multiply rounded-2xl" style="background: url(images/3.png) rgba(19, 19, 24, 0.50);">
+                <div class=" flex-1 bg-cover bg-blend-multiply rounded-2xl"
+                    style="background: url(images/3.png) rgba(19, 19, 24, 0.50);">
                     <div class="pt-10 lg:pt-24 pb-10 pl-10">
                         <h1 class="mb-5 text-2xl text-white font-bold">Teenager Program</h1>
-                        <p class="mb-5 max-w-[495px] text-white ml-0">Welcome to our Teenager Program, where the future of hockey takes center stage. We are dedicated to nurturing the skills and enthusiasm of our young athletes.<p>
-                        <button class="btn bg-hockey-primary border-hockey-primary text-white hover:text-hockey-primary hover:bg-transparent hover:border-hockey-primary">Register now!</button>
+                        <p class="mb-5 max-w-[495px] text-white ml-0">Welcome to our Teenager Program, where the future
+                            of hockey takes center stage. We are dedicated to nurturing the skills and enthusiasm of our
+                            young athletes.
+                        <p>
+                            <button
+                                class="btn bg-hockey-primary border-hockey-primary text-white hover:text-hockey-primary hover:bg-transparent hover:border-hockey-primary">Register
+                                now!</button>
                     </div>
                 </div>
             </div>
-            <div class="my-8 w-full bg-cover bg-blend-multiply rounded-2xl" style="background: url(images/4.png) rgba(19, 19, 24, 0.50);">
+            <div class="my-8 w-full bg-cover bg-blend-multiply rounded-2xl"
+                style="background: url(images/4.png) rgba(19, 19, 24, 0.50);">
                 <div class="pt-10 lg:pt-48 pb-10 pl-10">
                     <h1 class="mb-5 text-2xl text-white font-bold">Professional Program</h1>
-                    <p class="mb-5 max-w-[520px] text-white ml-0">Welcome to the heart of excellence! Our Professional Program is meticulously designed for passionate hockey enthusiasts who aspire to reach the pinnacle of their skills. Immerse yourself in a world of elite coaching.<p>
-                    <button class="btn bg-hockey-primary border-hockey-primary text-white hover:text-hockey-primary hover:bg-transparent hover:border-hockey-primary">Register now!</button>
+                    <p class="mb-5 max-w-[520px] text-white ml-0">Welcome to the heart of excellence! Our Professional
+                        Program is meticulously designed for passionate hockey enthusiasts who aspire to reach the
+                        pinnacle of their skills. Immerse yourself in a world of elite coaching.
+                    <p>
+                        <button
+                            class="btn bg-hockey-primary border-hockey-primary text-white hover:text-hockey-primary hover:bg-transparent hover:border-hockey-primary">Register
+                            now!</button>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="my-10 w-full border-t-2 border-b-2 border-dashed py-8 text-center">
+                <h2 class="font-extrabold text-2xl lg:text-4xl text-hockey-font pb-4">Our New Products</h2>
+                <p class="max-w-[600px] mx-auto text-gray-400 font-medium">Discover the latest additions to our lineup
+                    that bring your passion for hockey to a whole new level.</p>
+            </div>
+            <div class="my-10 grid grid-cols-1 lg:grid-cols-2 gap-6">
+                <div class="card max-w-[570px] border-2 border-gray-300 py-6 flex-col lg:flex-row bg-base-100 shadow-xl">
+                    <img class="flex-1 w-[180px] px-6" src="images/5.png" alt="Shoes" />
+                    <div class="card-body p-4">
+                        <div class="card-actions justify-start">
+                            <div class="badge badge-sm gap-2 text-base"><i class="fa-solid fa-star text-yellow-500"></i>5.0</div>
+                            <div class="badge badge-sm gap-2 text-base"><i class="fa-regular fa-eye "></i>20</div>
+                            <div class="badge badge-sm gap-2 text-base"><i class="fa-regular fa-heart"></i>200</div>
+                        </div>
+                        <h2 class="card-title font-extrabold">
+                            World Cup Flags Football
+                        </h2>
+                        <p>Dive into the heart of international hockey excellence</p>
+                        <div class="card-actions justify-start">
+                            <div class="badge badge-xs text-red-600 text-base font-extrabold">Price - $22.00</div>
+                            <div class="badge badge-xs gap-2 text-gray-400 text-base"><i class="fa-solid fa-cart-shopping"></i>Delivery Fee : Free</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card max-w-[570px] border-2 border-gray-300 py-6 flex-col lg:flex-row bg-base-100 shadow-xl">
+                    <img class="flex-1 w-[180px] px-6" src="images/6.png" alt="Shoes" />
+                    <div class="card-body p-4">
+                        <div class="card-actions justify-start">
+                            <div class="badge badge-sm gap-2 text-base"><i class="fa-solid fa-star text-yellow-500"></i>5.0</div>
+                            <div class="badge badge-sm gap-2 text-base"><i class="fa-regular fa-eye "></i>20</div>
+                            <div class="badge badge-sm gap-2 text-base"><i class="fa-regular fa-heart"></i>200</div>
+                        </div>
+                        <h2 class="card-title font-extrabold">
+                            World Cup Flags Football
+                        </h2>
+                        <p>Dive into the heart of international hockey excellence</p>
+                        <div class="card-actions justify-start">
+                            <div class="badge badge-xs text-red-600 text-base font-extrabold">Price - $22.00</div>
+                            <div class="badge badge-xs gap-2 text-gray-400 text-base"><i class="fa-solid fa-cart-shopping"></i>Delivery Fee : Free</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card max-w-[570px] border-2 border-gray-300 py-6 flex-col lg:flex-row bg-base-100 shadow-xl">
+                    <img class="flex-1 w-[180px] px-6" src="images/7.png" alt="Shoes" />
+                    <div class="card-body p-4">
+                        <div class="card-actions justify-start">
+                            <div class="badge badge-sm gap-2 text-base"><i class="fa-solid fa-star text-yellow-500"></i>5.0</div>
+                            <div class="badge badge-sm gap-2 text-base"><i class="fa-regular fa-eye "></i>20</div>
+                            <div class="badge badge-sm gap-2 text-base"><i class="fa-regular fa-heart"></i>200</div>
+                        </div>
+                        <h2 class="card-title font-extrabold">
+                            Cap For Hockeys
+                        </h2>
+                        <p>Dive into the heart of international hockey excellence</p>
+                        <div class="card-actions justify-start">
+                            <div class="badge badge-xs text-red-600 text-base font-extrabold">Price - $22.00</div>
+                            <div class="badge badge-xs gap-2 text-gray-400 text-base"><i class="fa-solid fa-cart-shopping"></i>Delivery Fee : Free</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card max-w-[570px] border-2 border-gray-300 py-6 flex-col lg:flex-row bg-base-100 shadow-xl">
+                    <img class="flex-1 w-[180px] px-6" src="images/8.png" alt="Shoes" />
+                    <div class="card-body p-4">
+                        <div class="card-actions justify-start">
+                            <div class="badge badge-sm gap-2 text-base"><i class="fa-solid fa-star text-yellow-500"></i>5.0</div>
+                            <div class="badge badge-sm gap-2 text-base"><i class="fa-regular fa-eye "></i>20</div>
+                            <div class="badge badge-sm gap-2 text-base"><i class="fa-regular fa-heart"></i>200</div>
+                        </div>
+                        <h2 class="card-title font-extrabold">
+                            World Cup Flags Football
+                        </h2>
+                        <p>Dive into the heart of international hockey excellence</p>
+                        <div class="card-actions justify-start">
+                            <div class="badge badge-xs text-red-600 text-base font-extrabold">Price - $22.00</div>
+                            <div class="badge badge-xs gap-2 text-gray-400 text-base"><i class="fa-solid fa-cart-shopping"></i>Delivery Fee : Free</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card max-w-[570px] border-2 border-gray-300 py-6 flex-col lg:flex-row bg-base-100 shadow-xl">
+                    <img class="flex-1 w-[180px] px-6" src="images/9.png" alt="Shoes" />
+                    <div class="card-body p-4">
+                        <div class="card-actions justify-start">
+                            <div class="badge badge-sm gap-2 text-base"><i class="fa-solid fa-star text-yellow-500"></i>5.0</div>
+                            <div class="badge badge-sm gap-2 text-base"><i class="fa-regular fa-eye "></i>20</div>
+                            <div class="badge badge-sm gap-2 text-base"><i class="fa-regular fa-heart"></i>200</div>
+                        </div>
+                        <h2 class="card-title font-extrabold">
+                            World Cup Flags Football
+                        </h2>
+                        <p>Dive into the heart of international hockey excellence</p>
+                        <div class="card-actions justify-start">
+                            <div class="badge badge-xs text-red-600 text-base font-extrabold">Price - $22.00</div>
+                            <div class="badge badge-xs gap-2 text-gray-400 text-base"><i class="fa-solid fa-cart-shopping"></i>Delivery Fee : Free</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card max-w-[570px] border-2 border-gray-300 py-6 flex-col lg:flex-row bg-base-100 shadow-xl">
+                    <img class="flex-1 w-[180px] px-6" src="images/10.png" alt="Shoes" />
+                    <div class="card-body p-4">
+                        <div class="card-actions justify-start">
+                            <div class="badge badge-sm gap-2 text-base"><i class="fa-solid fa-star text-yellow-500"></i>5.0</div>
+                            <div class="badge badge-sm gap-2 text-base"><i class="fa-regular fa-eye "></i>20</div>
+                            <div class="badge badge-sm gap-2 text-base"><i class="fa-regular fa-heart"></i>200</div>
+                        </div>
+                        <h2 class="card-title font-extrabold">
+                            World Cup Flags Football
+                        </h2>
+                        <p>Dive into the heart of international hockey excellence</p>
+                        <div class="card-actions justify-start">
+                            <div class="badge badge-xs text-red-600 text-base font-extrabold">Price - $22.00</div>
+                            <div class="badge badge-xs gap-2 text-gray-400 text-base"><i class="fa-solid fa-cart-shopping"></i>Delivery Fee : Free</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
