--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </div>
                     <ul tabindex="0"
                         class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-                        <li><a href="#home" class="hover:text-hockey-primary">Home</a></li>
+                        <li><a href="#home" class="hover:text-hockey-primary active:text-hockey-primary ">Home</a></li>
                         <li><a href="#about" class="hover:text-hockey-primary">About</a></li>
                         <li><a href="#pages" class="hover:text-hockey-primary">Pages</a></li>
                         <li><a href="#blog" class="hover:text-hockey-primary">Blog</a></li>
@@ -81,7 +81,7 @@
         </div>
     </header>
     <main class="w-[81.25%] max-w-[1170px] mx-auto">
-        <section>
+        <section id="home">
             <div class="carousel w-full lg:h-[500px] rounded-2xl mt-12 ">
                 <div id="slide1" class="carousel-item w-full relative flex flex-col">
                     <div class=" relative w-full">
@@ -203,7 +203,7 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section id="about">
             <div class="w-full border-t-2 border-b-2 border-dashed py-8 text-center">
                 <h2 class="font-extrabold text-2xl lg:text-4xl text-hockey-font pb-4">Program Sections</h2>
                 <p class="max-w-[600px] mx-auto text-gray-400 font-medium">Explore the heart of our hockey community
@@ -252,7 +252,7 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section id="pages">
             <div class="my-10 w-full border-t-2 border-b-2 border-dashed py-8 text-center">
                 <h2 class="font-extrabold text-2xl lg:text-4xl text-hockey-font pb-4">Our New Products</h2>
                 <p class="max-w-[600px] mx-auto text-gray-400 font-medium">Discover the latest additions to our lineup
@@ -387,7 +387,7 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section id="blog">
             <div class="w-full border-t-2 border-b-2 border-dashed py-8 text-center">
                 <h2 class="font-extrabold text-2xl lg:text-4xl text-hockey-font pb-4">Clients Question</h2>
                 <p class="max-w-[600px] mx-auto text-gray-400 font-medium">Welcome to the pulse of our hockey universe!
@@ -463,7 +463,7 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section id="contact">
             <div class="w-full border-t-2 border-b-2 border-dashed py-8 text-center">
                 <h2 class="font-extrabold text-2xl lg:text-4xl text-hockey-font pb-4">Get In Touch</h2>
                 <p class="max-w-[600px] mx-auto text-gray-400 font-medium">Connect with the heart of our hockey
